fix: height for scroll overflow

--- a/singolo.css
+++ b/singolo.css
@@ -475,7 +475,7 @@ html {
 body,
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 95px;
+  scroll-padding-top: 88px;
 }
 
 body,
